Updated temporary questions and fixed overflow link.

--- a/Langwitch/public/css/homecourse.css
+++ b/Langwitch/public/css/homecourse.css
@@ -40,6 +40,7 @@
 }
 
 .jekin {
+    height: fit-content;
     text-decoration: none;
 }
 
